@@ -13,8 +13,9 @@ Miscellaneous algorithms for 2D contours and 3D triangularized meshes handling
 
 
 import numpy as np
+from numpy.linalg import norm
 import os.path as op
-from scipy.spatial.distance import euclidean
+from nipype.external import six
 
 from .. import logging
 
@@ -79,14 +80,16 @@ class ComputeMeshWarp(BaseInterface):
     output_spec = ComputeMeshWarpOutputSpec
 
     def _triangle_area(self, A, B, C):
-        ABxAC = euclidean(A, B) * euclidean(A, C)
-        prod = np.dot(np.array(B) - np.array(A), np.array(C) - np.array(A))
+        A = np.array(A)
+        B = np.array(B)
+        C = np.array(C)
+        ABxAC = norm(A - B) * norm(A - C)
+        prod = np.dot(B - A, C - A)
         angle = np.arccos(prod / ABxAC)
         area = 0.5 * ABxAC * np.sin(angle)
         return area
 
     def _run_interface(self, runtime):
-        from numpy import linalg as nla
         try:
             from tvtk.api import tvtk
         except ImportError:
@@ -116,7 +119,7 @@ class ComputeMeshWarp(BaseInterface):
         diff = points2 - points1
         weights = np.ones(len(diff))
 
-        errvector = nla.norm(diff, axis=1)
+        errvector = norm(diff, axis=1)
         if self.inputs.metric == 'sqeuclidean':
             errvector = errvector ** 2
 
@@ -147,7 +150,6 @@ class ComputeMeshWarp(BaseInterface):
             file_name=op.abspath(self.inputs.out_warp))
         writer.set_input_data(out_mesh)
         writer.write()
-        #write_data(out_mesh, op.abspath(self.inputs.out_warp))
 
         self._distance = np.average(errvector, weights=weights)
         return runtime
@@ -157,6 +159,144 @@ class ComputeMeshWarp(BaseInterface):
         outputs['out_file'] = op.abspath(self.inputs.out_file)
         outputs['out_warp'] = op.abspath(self.inputs.out_warp)
         outputs['distance'] = self._distance
+        return outputs
+
+
+class MeshWarpMathsInputSpec(BaseInterfaceInputSpec):
+    in_surf = File(exists=True, mandatory=True,
+                   desc=('Input surface in vtk format, with associated warp '
+                         'field as point data (ie. from ComputeMeshWarp'))
+    float_trait = traits.Either(traits.Float(1.0), traits.Tuple(
+        traits.Float(1.0), traits.Float(1.0), traits.Float(1.0)))
+
+    operator = traits.Either(
+        float_trait, File(exists=True), default=1.0, mandatory=True,
+        desc=('image, float or tuple of floats to act as operator'))
+
+    operation = traits.Enum('sum', 'sub', 'mul', 'div', usedefault=True,
+                            desc=('operation to be performed'))
+
+    out_warp = File('warp_maths.vtk', usedefault=True,
+                    desc='vtk file based on in_surf and warpings mapping it '
+                    'to out_file')
+    out_file = File('warped_surf.vtk', usedefault=True,
+                    desc='vtk with surface warped')
+
+
+class MeshWarpMathsOutputSpec(TraitedSpec):
+    out_warp = File(exists=True, desc=('vtk file with the vertex-wise '
+                                       'mapping of surface1 to surface2'))
+    out_file = File(exists=True,
+                    desc='vtk with surface warped')
+
+
+class MeshWarpMaths(BaseInterface):
+
+    """
+    Performs the most basic mathematical operations on the warping field
+    defined at each vertex of the input surface. A surface with scalar
+    or vector data can be used as operator for non-uniform operations.
+
+    .. warning:
+
+      A point-to-point correspondence between surfaces is required
+
+
+    Example
+    -------
+
+    >>> import nipype.algorithms.mesh as m
+    >>> mmath = m.MeshWarpMaths()
+    >>> mmath.inputs.in_surf = 'surf1.vtk'
+    >>> mmath.inputs.operator = 'surf2.vtk'
+    >>> mmath.inputs.operation = 'mul'
+    >>> res = mmath.run() # doctest: +SKIP
+
+    """
+
+    input_spec = MeshWarpMathsInputSpec
+    output_spec = MeshWarpMathsOutputSpec
+
+    def _run_interface(self, runtime):
+        try:
+            from tvtk.api import tvtk
+        except ImportError:
+            raise ImportError('Interface ComputeMeshWarp requires tvtk')
+
+        try:
+            from enthought.etsconfig.api import ETSConfig
+            ETSConfig.toolkit = 'null'
+        except ImportError:
+            iflogger.warn(('ETS toolkit could not be imported'))
+            pass
+        except ValueError:
+            iflogger.warn(('ETS toolkit is already set'))
+            pass
+
+        r1 = tvtk.PolyDataReader(file_name=self.inputs.in_surf)
+        vtk1 = r1.output
+        r1.update()
+        points1 = np.array(vtk1.points)
+
+        if vtk1.point_data.vectors is None:
+            raise RuntimeError(('No warping field was found in in_surf'))
+
+        operator = self.inputs.operator
+        opfield = np.ones_like(points1)
+
+        if isinstance(operator, six.string_types):
+            r2 = tvtk.PolyDataReader(file_name=self.inputs.surface2)
+            vtk2 = r2.output
+            r2.update()
+            assert(len(points1) == len(vtk2.points))
+
+            opfield = vtk2.point_data.vectors
+
+            if opfield is None:
+                opfield = vtk2.point_data.scalars
+
+            if opfield is None:
+                raise RuntimeError(
+                    ('No operator values found in operator file'))
+
+            opfield = np.array(opfield)
+
+            if opfield.shape[1] < points1.shape[1]:
+                opfield = np.array([opfield.tolist()] * points1.shape[1]).T
+        else:
+            operator = np.atleast_1d(operator)
+            opfield *= operator
+
+        warping = np.array(vtk1.point_data.vectors)
+
+        if self.inputs.operation == 'sum':
+            warping += opfield
+        elif self.inputs.operation == 'sub':
+            warping -= opfield
+        elif self.inputs.operation == 'mul':
+            warping *= opfield
+        elif self.inputs.operation == 'div':
+            warping /= opfield
+
+        vtk1.point_data.vectors = warping
+        writer = tvtk.PolyDataWriter(
+            file_name=op.abspath(self.inputs.out_warp))
+        writer.set_input_data(vtk1)
+        writer.write()
+
+        vtk1.point_data.vectors = None
+        vtk1.points = points1 + warping
+        writer = tvtk.PolyDataWriter(
+            file_name=op.abspath(self.inputs.out_file))
+        writer.set_input_data(vtk1)
+        writer.write()
+
+        return runtime
+
+    def _list_outputs(self):
+        outputs = self._outputs().get()
+        outputs['out_file'] = op.abspath(self.inputs.out_file)
+        outputs['out_warp'] = op.abspath(self.inputs.out_warp)
         return outputs
 
 
