@@ -1,6 +1,11 @@
 Next release
 ============
 
+* ENH: New mesh.MeshWarpMaths to operate on surface-defined warpings
+       (https://github.com/nipy/nipype/pull/1016)
+* FIX: Refactor P2PDistance, change name to ComputeMeshWarp, add regression tests,
+       fix bug in area weighted distance, and added optimizations
+       (https://github.com/nipy/nipype/pull/1016)
 * FIX: Amend create_tbss_non_fa() workflow to match FSL's tbss_non_fa command. (https://github.com/nipy/nipype/pull/1033)
 * FIX: remove unused mandatory flag from spm normalize (https://github.com/nipy/nipype/pull/1048)
 * ENH: Update ANTSCorticalThickness interface (https://github.com/nipy/nipype/pull/1013)
